--- a/css/style.css
+++ b/css/style.css
@@ -1729,3 +1729,12 @@ footer p{
 footer .img-fluid{
   width: 100px;
 }
+
+.mt-1{
+  margin-top: 1em !important;
+}
+
+.modal-title{
+  text-transform: uppercase;
+  font-size: 40px;
+}
